--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,10 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --primary-color: #F36486;
+  --accent-color: #006f60;
+  --text-dark: rgb(30, 41, 59);
+  --text-dark-light: rgb(71, 85, 105);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,17 +21,5 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  font-family: 'Montserrat', sans-serif;
 }
