--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
   --primary-color: #F36486;
+  --primary-color-light: #FEF1F7;
   --accent-color: #006f60;
   --text-dark: rgb(30, 41, 59);
   --text-dark-light: rgb(71, 85, 105);
